# resilient-emergency-response

./: .gitignore  LICENSE  README.md  TECHNICAL_REFERENCE.md  VIDEO_DEMO_SCRIPT.md  pyproject.toml  requirements.txt
.claude/: settings.json
app/: dashboard.py
config/: valid_seeds.json
configs/: default.yaml
docs/: Appendix_D_Technical_Reference_v1.md  GUIDE.md
logs for good dtn/: experiment_report.md
notebooks/: experiment_report.ipynb
notebooks/.ipynb_checkpoints/: experiment_report-checkpoint.ipynb
output/: pilot_raw_results.json
scripts/: README.md  delivery_time_analysis.py  diagnose_anomalies.py  diagnose_anomaly3_30seeds.py  diagnose_coordination.py  diagnose_delivery.py  diagnose_delivery_time.py  diagnose_encounters.py  diagnose_kmax_fix.py  diagnose_mobility_prophet.py  diagnose_recency.py  diagnose_seed49.py  diagnose_warmup.py  pilot_experiment.py  robustness_check_seed6.py  run_animation.py  run_experiment.py  validate_seeds.py
src/ercs/: __init__.py
src/ercs/communication/: __init__.py  prophet.py
src/ercs/config/: __init__.py  parameters.py  schemas.py
src/ercs/coordination/: __init__.py  algorithms.py
src/ercs/evaluation/: __init__.py  metrics.py
src/ercs/network/: __init__.py  mobility.py  topology.py
src/ercs/scenario/: __init__.py  generator.py
src/ercs/simulation/: __init__.py  engine.py
src/ercs/visualization/: __init__.py  animation.py  diagnostics.py  plots.py
tests/: __init__.py  conftest.py  test_algorithm_fix.py  test_communication.py  test_config_consistency.py  test_coordination.py  test_diagnostic_anomalies.py  test_dynamic_weights.py  test_encounter_recency.py  test_evaluation.py  test_mobility.py  test_network.py  test_scenario.py  test_simulation.py  test_warmup.py
