[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ercs"
version = "0.1.0"
description = "Emergency Response Coordination Simulator - Adaptive scheduling algorithms for emergency response under intermittent connectivity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Diana Fonseca" }
]
keywords = [
    "emergency-response",
    "DTN",
    "delay-tolerant-networking",
    "PRoPHET",
    "simulation",
    "coordination",
    "disaster-response",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

viz = [
    "streamlit>=1.30",
    "jupyter>=1.0",
]

docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]

[project.urls]
Homepage = "https://github.com/dianasnfonseca/resilient-emergency-response"
Documentation = "https://github.com/dianasnfonseca/resilient-emergency-response#readme"
Repository = "https://github.com/dianasnfonseca/resilient-emergency-response"
Issues = "https://github.com/dianasnfonseca/resilient-emergency-response/issues"

[project.scripts]
ercs = "ercs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ercs = ["py.typed"]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ercs"]
known_third_party = ["networkx", "numpy", "scipy", "pydantic", "yaml", "matplotlib", "pandas"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_gitignore = true
force_single_line = false
combine_as_imports = true

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches (simulation engine complexity is inherent)
    "PLR0915", # too many statements (simulation engine complexity is inherent)
    "RUF001",  # ambiguous unicode in strings (intentional math symbols: ×, β, γ, η²)
    "RUF002",  # ambiguous unicode in docstrings (intentional math symbols)
    "RUF003",  # ambiguous unicode in comments (intentional math symbols)
    "PLC0415", # import outside top-level (lazy imports for optional deps/circular avoidance)
    "ARG002",  # unused method argument (protocol conformance in algorithm subclasses)
]
[tool.ruff.lint.extend-per-file-ignores]
"src/ercs/simulation/engine.py" = [
    "RUF012",  # mutable class default (dataclass-style event queue)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # Unused arguments OK in tests
    "PLR2004", # Magic values OK in tests
]
"scripts/**/*.py" = [
    "E402",     # Module imports after sys.path manipulation
    "PLC0415",  # Import outside top level (after sys.path setup)
]
"app/**/*.py" = [
    "E402",     # Module imports after sys.path manipulation
    "PLC0415",  # Import outside top level (after sys.path setup)
]

[tool.ruff.lint.isort]
known-first-party = ["ercs"]

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ercs.visualization.animation",
    "ercs.visualization.diagnostics",
    "ercs.visualization.plots",
]
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "ercs.simulation.engine",
    "ercs.coordination.algorithms",
    "ercs.network.topology",
    "ercs.network.mobility",
]
# Engine/algorithms use late-initialized Optional attributes (set in run(), not __init__)
# These are always non-None when accessed during simulation but mypy can't verify
warn_return_any = false
disallow_untyped_defs = false

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/ercs"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "src/ercs/visualization/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
